name:           hpwgen
version:        0.4.2.0
synopsis:       Library and command line tool for generating random passwords.
description:
  Library and command line tool for generating random passwords. Library API is
  very generic allowing to use arbitrary string/text and pseudo random number
  generator implementation.
homepage:       https://github.com/trskop/hpwgen
license:        BSD3
license-file:   LICENSE
author:         Peter Trsko
maintainer:     peter.trsko@gmail.com
copyright:      (c) 2013 Peter Trško
category:       Text
build-type:     Simple
cabal-version:  >=1.8

-- data-files:
extra-source-files:
    README.md

flag pedantic
  description:
    Pass additional flags, including -Werror, to GHC during compilation.
  default: False

flag with-bytestring
  description: Compile with ByteString support.
  default: True

flag with-text
  description: Compile with Text support.
  default: True

library
  hs-source-dirs:       src
  exposed-modules:
      Text.Pwgen
    , Text.Pwgen.Common
    , Text.Pwgen.FromAscii
    , Text.Pwgen.FromAscii.Class
    , Text.Pwgen.Pronounceable
  -- other-modules:
  build-depends:
      base == 4.*
    , array
    , data-default-class == 0.0.*
    , bytestring
    , not-found >= 0.6
  if flag(with-bytestring)
    exposed-modules:    Text.Pwgen.FromAscii.ByteString
    build-depends:      bytestring
  if flag(with-text)
    exposed-modules:    Text.Pwgen.FromAscii.Text
    build-depends:      text
  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror

executable hpwgen
  hs-source-dirs:       src
  main-is:              main.hs
  other-modules:
      Main.Application
    , Main.MiniLens
    , Main.Random
    , Text.Pwgen
    , Text.Pwgen.Common
    , Text.Pwgen.FromAscii
    , Text.Pwgen.FromAscii.ByteString
    , Text.Pwgen.FromAscii.Class
    , Text.Pwgen.Pronounceable
  if flag(with-text)
    other-modules:      Text.Pwgen.FromAscii.Text
    build-depends:      text
  build-depends:
      base == 4.*

    , application-common >= 0.3 && < 0.4
    , array
    , bytestring
    , data-default-class == 0.0.*
    , data-default-instances-base == 0.0.*
    , MonadRandom == 0.1.*
    , not-found >= 0.6
    , semigroups
    , text
    , terminal-size == 0.2.*
  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror

source-repository head
  type:                 git
  location:             git://github.com/trskop/hpwgen.git
